[dti-website] Fix navbar on mobile (#93)

--- a/dti-website/src/components/DtiMainMenu.scss
+++ b/dti-website/src/components/DtiMainMenu.scss
@@ -12,13 +12,6 @@
   margin-bottom: -0.5rem;
 }
 
-.override-apply-color {
-  a {
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-}
-
 .brand-icon {
   width: 7vh;
   height: 7vh;
